# FunctionalNetworksSFT

./: .gitignore  0.43.0  2.5.0  CLAUDE.md  CONTEXT_MODEL.md  CROSS_PLATFORM_SETUP.md  PEFT_VS_FULL_FINETUNING.md  README.md  README_ICA_TEMPLATES.md  TESTING.md  example_usage.py  pyproject.toml  test_dataset.py  test_installation.py
.claude/agents/: ica-continual-learning.md
.github/: copilot-instructions.md
docs/: Brain-Inspired_Exploration_of_Functional_Networks_and_Key_Neurons_in_LLMs.md  CROSS_PLATFORM_SETUP.md  Dynamic_Orthogonal_Continual_Fine-Tuning_DOC.md  ICA_DTYPE_OPTIMIZATION.md  License_Optimization_Recommendations.csv  README_ICA_TEMPLATES.md  Template_formats.md  continual_learning_assessment_augment.md  continual_learning_assessment_claude.md  continual_learning_assessment_openai.md  evaluation_framework.md  merge_adapter_usage.md
examples/: README.md  demo_split_aware_loading.py  evaluation_demo.py  full_finetuning_config.yaml  ica_dtype_performance_demo.py  llama_sarcasm_example.py  peft_training_config.yaml  system_user_assistant_demo.py  template_format_demo.py  test_transformer_block_detection.py  training_mode_demo.py
examples/evaluation_configs/: comprehensive_evaluation.yaml  quick_evaluation.yaml  safety_focused.yaml
experiments/: README.md  run_experiments.py
experiments/continual_learning/configs/: llama_13b.yaml  llama_3_2_1b.yaml  llama_7b.yaml  t5_large.yaml
experiments/continual_learning/draft_paper/: paper.md
experiments/continual_learning/scripts/: generate_tables.py  run_all_baselines.sh  run_ica_method.sh
experiments/experiment_a_peft_only/config/: experiment_a_config.yaml
experiments/experiment_a_peft_only/scripts/: run_experiment_a.py
experiments/experiment_b_peft_ica/config/: experiment_b_config.yaml
experiments/ica_comparison/: README.md  baseline_training_config.yaml  compare_results.py  experimental_training_config.yaml  financial_evaluation_config.yaml  run_comparative_experiment.py  test_experiment_setup.py
experiments/peft_vs_peft-ica/: README.md  common_config.yaml  evaluate_models.py  run_experiments.py  temp_config_a.yaml  test_evaluation.py
experiments/peft_vs_peft-ica/experiment_a_peft_only/config/: experiment_a_config.yaml
experiments/peft_vs_peft-ica/experiment_a_peft_only/scripts/: run_experiment_a.py
experiments/peft_vs_peft-ica/experiment_b_peft_ica/config/: experiment_b_config.yaml  temp_config.yaml  temp_config_run_1.yaml  temp_config_run_2.yaml
experiments/peft_vs_peft-ica/experiment_b_peft_ica/scripts/: run_experiment_b.py
experiments/peft_vs_peft-ica/experiment_c_peft_ica_preserve/config/: experiment_c_config.yaml
experiments/peft_vs_peft-ica/experiment_c_peft_ica_preserve/scripts/: run_experiment_c.py
scripts/: setup_cuda.py
src/functionalnetworkssft/: build_ica_templates.py  check_hf_token.py  cli_gguf.py  fnsft_trainer.py  ica_mask.py  sft_trainer.py  vibethinker.py
src/functionalnetworkssft/continual_learning/: __init__.py  aggregation.py  checkpointing.py  config.py  evaluation.py  lm_eval_runner.py  metrics.py  orchestrator.py  reference_results.py  reproducibility.py  utils.py
src/functionalnetworkssft/continual_learning/methods/: __init__.py  base.py  doc.py  ewc.py  ica_networks.py  lora_baseline.py  lwf.py  o_lora.py
src/functionalnetworkssft/continual_learning/task_data/: __init__.py  config.py  loaders.py  prompts.py
src/functionalnetworkssft/evaluation/: __init__.py
src/functionalnetworkssft/evaluation/benchmarks/: __init__.py  language_understanding.py  performance_metrics.py  safety_bias.py  standard_benchmarks.py
src/functionalnetworkssft/evaluation/cli/: __init__.py  evaluation_cli.py
src/functionalnetworkssft/evaluation/core/: __init__.py  config.py  evaluator.py  metrics.py  results.py
src/functionalnetworkssft/evaluation/reporting/: __init__.py  statistics.py
src/functionalnetworkssft/utils/: __init__.py  config_defaults.py  dataset_utils.py  hf_utilities.py  inference.py  model_utils.py  platform_setup.py  post_processing.py
tests/: test_block_detection.py  test_build_ica_templates.py  test_camel_ai_physics_integration.py  test_config_attribute_fix.py  test_config_defaults.py  test_continual_learning.py  test_cuda_configuration.py  test_dataset_formatter.py  test_device_handling.py  test_estimate_masked_params.py  test_evaluation_framework.py  test_experiment_b_fix.py  test_gradient_issue.py  test_ica_cli_integration.py  test_ica_dtype_optimization.py  test_ica_mask_application.py  test_ica_mask_integration_fix.py  test_ica_mask_layers.py  test_ica_mask_variable_fix.py  test_ica_masking.py  test_ica_row_parametrizations_fix.py  test_ica_suite.py  test_installation.py  test_peft_vs_full_training.py  test_split_aware_loading.py  test_template_cli_integration.py  test_template_handling.py  test_training_cleanup_fix.py  test_training_device_integration.py
